# autoresearch-mlx

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  cli.py  config.yaml  config_temp.yaml  docker-compose.yml  pyproject.toml  rebuild_prototypes.py  render.yaml  requirements-optional.txt  requirements.txt  run.py
.devcontainer/: devcontainer.json
autoresearch_mlx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
configs/: fresh-verify.ollama.example.yaml
data/: discovery_expansion.json  reddit_relay_cache.db
docs/: CALIBRATION_v4.md  CODE_REVIEW_FULL.md  DESIGN_SPEC_REVIEW_2026-04-16.md  DESIGN_SPEC_REVIEW_2026-04-18.md  ENGINEERING_SPEC.md  LOOP.md  PRODUCT_LOOP.md  RECOVERY.md  SYNC_REVIEW_MAIN_RENDER_READY.md  V2_SCORING_AUDIT_2026-04-23.md  build_brief_contract.md  codespaces.md  gates.md  production-runtime.md  render-deploy.md  state-model.md
evals/: behavior_gold.json
output/: pipeline_status.json
recovery_artifacts/: _pyc_loader.py.bak
scripts/: diagnose_validation.py  export_clean_repo.sh  force_re_evidence_llm_v2.py  re_evidence_parked.py
src/: __main__.py  behavior_eval.py  build_prep.py  builder_output.py  competitor_intel.py  database.py  database_views.py  discovery_expander.py  discovery_governance.py  discovery_next_wave.py  discovery_queries.py  discovery_schema.py  discovery_suggestions.py  discovery_term_lifecycle.py  gate_diagnostics.py  github_sources.py  high_leverage.py  llm_discovery_expander.py  messaging.py  opportunity_engine.py  opportunity_evaluation.py  (+22 more)
(+114 files in other folders)
