[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Evidence-first weak-signal discovery and validation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1,<2",
  "aiohttp>=3.11,<4",
  "beautifulsoup4>=4.12,<5",
  "ddgs>=9,<10",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "PyYAML>=6,<7",
  "requests>=2.32,<3",
  "youtube-transcript-api>=0.6,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
]
optional = [
  "anthropic>=0.39,<1",
  "apify-client>=1.6,<2",
  "scikit-learn>=1.5,<2",
  "sentence-transformers>=3,<4",
]

[project.scripts]
autoresearch = "cli:main_sync"

[tool.setuptools]
include-package-data = true
py-modules = ["cli", "run"]

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.setuptools.package-data]
src = ["resources/*.yaml", "resources/evals/*.json"]
